[package]
name = "async-channels"
version = "0.1.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "1.1"
atomic-waker = "1.0"
pin-project-lite = "0.1"
